Refactor theme colors and update UI components; add new AWS SVG icon and enhance remote configuration modal functionality

--- a/src/app/components/titlebar/titlebar.component.scss
+++ b/src/app/components/titlebar/titlebar.component.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   height: var(--titlebar-height);
-  background: var(--app-background);
+  background: var(--secondary-background);
   color: var(--app-text-color);
   padding: 4px var(--title-bar-padding);
   border-radius: 8px 8px 0 0;
